# spine_rotation_bug

./: CMakeLists.txt  README.md
src/: main-simple.c  main.cpp
